@@ -19,7 +19,6 @@ import static java.util.Collections.emptyMap;
 import static java.util.Optional.ofNullable;
 import static java.util.concurrent.CompletableFuture.completedFuture;
 import static java.util.stream.Collectors.joining;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
 
 import java.io.ByteArrayInputStream;
@@ -148,7 +147,7 @@ public class BulkReadResourceImpl implements BulkReadResource {
                         return completedFuture(invalidResponse);
                     }
                     return doExecute(request, uriInfo);
-                }).collect(toList());
+                }).toList();
         return CompletableFuture
                 .allOf(responses.toArray(EMPTY_PROMISES))
                 .handle((ignored, error) -> new BulkResponses(responses.stream().map(it -> {
@@ -163,7 +162,7 @@ public class BulkReadResourceImpl implements BulkReadResource {
                                 .entity(new ErrorPayload(ErrorDictionary.UNEXPECTED, e.getMessage()))
                                 .build());
                     }
-                }).collect(toList())));
+                }).toList()));
     }
 
     private boolean isBlacklisted(final BulkRequests.Request request) {
