@@ -98,7 +98,7 @@ public class MockTableService {
         return new Values(Stream
                 .of(QueryBuilder.Fields.values())
                 .map(f -> new Values.Item(f.name(), f.name()))
-                .collect(toList()));
+                .toList());
     }
 
     public interface Client extends HttpClient {
