@@ -20,7 +20,6 @@ import static java.util.Collections.emptyList;
 import static java.util.Comparator.comparing;
 import static java.util.Optional.ofNullable;
 import static java.util.stream.Collectors.joining;
-import static java.util.stream.Collectors.toList;
 import static lombok.AccessLevel.PRIVATE;
 
 import java.io.BufferedReader;
@@ -47,7 +46,6 @@ import java.util.Set;
 import java.util.SortedSet;
 import java.util.StringTokenizer;
 import java.util.TreeSet;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.xbean.finder.AnnotationFinder;
@@ -153,7 +151,7 @@ public abstract class DocBaseGenerator extends BaseTask {
         final Collection<String> docKeys = Stream
                 .of(getComponentPrefix(component), component.getSimpleName())
                 .map(it -> it + "._documentation")
-                .collect(toList());
+                .toList();
         return ofNullable(findResourceBundle(component))
                 .map(bundle -> docKeys
                         .stream()
@@ -180,7 +178,7 @@ public abstract class DocBaseGenerator extends BaseTask {
     }
 
     private Collection<ParameterMeta> sort(final Collection<ParameterMeta> parameterMetas) {
-        return parameterMetas.stream().sorted(comparing(ParameterMeta::getPath)).collect(toList());
+        return parameterMetas.stream().sorted(comparing(ParameterMeta::getPath)).toList();
     }
 
     protected void write(final File output, final String content) {
@@ -398,7 +396,7 @@ public abstract class DocBaseGenerator extends BaseTask {
                     .keySet()
                     .stream()
                     .filter(k -> k.startsWith("tcomp::ui::gridlayout::"))
-                    .collect(Collectors.toList());
+                    .toList();
             if (definedLayouts.isEmpty()) {
                 // If no layout defined, we take main if exists in parent
                 if (parentLayouts.contains("tcomp::ui::gridlayout::Main::value")) {
@@ -417,7 +415,7 @@ public abstract class DocBaseGenerator extends BaseTask {
                                     .list(new StringTokenizer(layoutConfig, "|"))
                                     .stream()
                                     .flatMap(p -> Collections.list(new StringTokenizer(p.toString(), ",")).stream())
-                                    .collect(Collectors.toList())
+                                    .toList()
                                     .contains(param);
 
                             if (isInThisLayout) {
@@ -588,7 +586,7 @@ public abstract class DocBaseGenerator extends BaseTask {
                                 metadata.get(it.replace("::target", "::value")),
                                 Boolean.parseBoolean(metadata.get(it.replace("::target", "::negate"))),
                                 metadata.get(it.replace("::target", "::evaluationStrategy")));
-                    }).collect(toList());
+                    }).toList();
             return new Conditions(path, globalOperator, conditionEntries);
         }
 
