@@ -20,7 +20,6 @@ import static java.util.Collections.emptyMap;
 import static java.util.Collections.enumeration;
 import static java.util.Collections.list;
 import static java.util.Optional.ofNullable;
-import static java.util.stream.Collectors.toList;
 import static lombok.AccessLevel.PRIVATE;
 import static org.talend.sdk.component.jar.Jars.toPath;
 
@@ -472,7 +471,7 @@ public class ConfigurableClassLoader extends URLClassLoader {
             return delegates;
         }
         final Collection<URL> aggregated = new ArrayList<>(list(delegates));
-        aggregated.addAll(nested.stream().map(r -> nestedResourceToURL(name, r)).collect(toList()));
+        aggregated.addAll(nested.stream().map(r -> nestedResourceToURL(name, r)).toList());
         return enumeration(aggregated);
     }
 
@@ -528,7 +527,7 @@ public class ConfigurableClassLoader extends URLClassLoader {
                                     .map(ByteArrayInputStream::new)
                                     .map(InputStream.class::cast))
                             .orElseGet(Stream::empty))
-                    .collect(toList());
+                    .toList();
         } catch (final IOException e) {
             throw new IllegalStateException(e);
         }
